--- a/bike-stats.ipynb
+++ b/bike-stats.ipynb
@@ -1,18 +1,377 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Analysis with Pandas - Cycle Share Data set - Trad Almelhem - 15-11-2021"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What is the average trip duration for a borrowed bicycle?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "b'Skipping line 50794: expected 12 fields, saw 20\\n'\n"
+     ]
+    }
+   ],
+   "source": [
+    "station = pd.read_csv('station.csv')\n",
+    "trip = pd.read_csv('trip.csv',error_bad_lines=False)\n",
+    "weather = pd.read_csv('weather.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What is the average trip duration for a borrowed bicycle ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1178.2956753399776"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def average_trip_duration():\n",
+    "    return trip['tripduration'].mean()\n",
+    "average_trip_duration()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What’s the most common age of a bicycle-sharer?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34.0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def most_common_age_sharer():\n",
+    "    age_sharer = trip['birthyear'].mode()\n",
+    "    current_year = 2021 \n",
+    "    return  round(current_year - age_sharer)[0]\n",
+    "most_common_age_sharer()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Given all the weather data here, find the average precipitation per month, and the median precipitation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fff\n"
+      "Mean / Month\n",
+      "1/1/2015     0.00\n",
+      "1/1/2016     0.00\n",
+      "1/10/2015    0.18\n",
+      "1/10/2016    0.00\n",
+      "1/11/2015    0.06\n",
+      "             ... \n",
+      "9/5/2015     0.06\n",
+      "9/6/2015     0.19\n",
+      "9/7/2015     0.00\n",
+      "9/8/2015     0.00\n",
+      "9/9/2015     0.00\n",
+      "Name: Precipitation_In, Length: 689, dtype: float64\n",
+      "Median / Month\n",
+      "1/1/2015     0.00\n",
+      "1/1/2016     0.00\n",
+      "1/10/2015    0.18\n",
+      "1/10/2016    0.00\n",
+      "1/11/2015    0.06\n",
+      "             ... \n",
+      "9/5/2015     0.06\n",
+      "9/6/2015     0.19\n",
+      "9/7/2015     0.00\n",
+      "9/8/2015     0.00\n",
+      "9/9/2015     0.00\n",
+      "Name: Precipitation_In, Length: 689, dtype: float64\n"
      ]
     }
    ],
+   "source": [
+    "def month(date):\n",
+    "    return int(date.split('/')[0])\n",
+    "weather['Month'] = weather['Date']\n",
+    "weather['Month'].apply(month)\n",
+    "\n",
+    "precipitation = weather.groupby('Month')['Precipitation_In']\n",
+    "print('Mean /', precipitation.mean())\n",
+    "print('Median /', precipitation.median())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What’s the average number of bikes at a given bike station?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def average_bikes_by_station():\n",
+    "    return station.current_dockcount.mean()\n",
+    "average_bikes_by_station()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## When a bike station is modified, is it more likely that it’ll lose bikes or gain bikes? How do you know?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>modification_date</th>\n",
+       "      <th>install_dockcount</th>\n",
+       "      <th>current_dockcount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>11/9/2015</td>\n",
+       "      <td>20</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>8/9/2016</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2/24/2015</td>\n",
+       "      <td>18</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2/24/2015</td>\n",
+       "      <td>28</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>3/24/2015</td>\n",
+       "      <td>30</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>3/27/2015</td>\n",
+       "      <td>12</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>3/18/2016</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>2/24/2015</td>\n",
+       "      <td>18</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>3/13/2015</td>\n",
+       "      <td>12</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>2/23/2015</td>\n",
+       "      <td>18</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>11/2/2015</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>3/4/2015</td>\n",
+       "      <td>12</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>10/29/2015</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>2/20/2015</td>\n",
+       "      <td>12</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>2/20/2015</td>\n",
+       "      <td>18</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>2/20/2015</td>\n",
+       "      <td>12</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>2/20/2015</td>\n",
+       "      <td>20</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   modification_date  install_dockcount  current_dockcount\n",
+       "7          11/9/2015                 20                 18\n",
+       "10          8/9/2016                 16                  0\n",
+       "12         2/24/2015                 18                 20\n",
+       "17         2/24/2015                 28                 26\n",
+       "22         3/24/2015                 30                 24\n",
+       "23         3/27/2015                 12                 16\n",
+       "26         3/18/2016                 16                  0\n",
+       "31         2/24/2015                 18                 20\n",
+       "35         3/13/2015                 12                 20\n",
+       "37         2/23/2015                 18                 16\n",
+       "38         11/2/2015                 20                  0\n",
+       "39          3/4/2015                 12                 16\n",
+       "46        10/29/2015                 16                  0\n",
+       "47         2/20/2015                 12                 14\n",
+       "48         2/20/2015                 18                 16\n",
+       "49         2/20/2015                 12                 14\n",
+       "50         2/20/2015                 20                 14"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "modified_station = station[['modification_date','install_dockcount','current_dockcount']]\n",
+    "modified_station.dropna() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -21,7 +380,7 @@
    "hash": "cd7c1699c6ef720e108487f7f3bb464142b1b490de749e2bb9b5d83d3ac96bf2"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.5 64-bit ('.venv': poetry)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -36,9 +395,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.5"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
