--- a/bike-stats.ipynb
+++ b/bike-stats.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
        "19               NaN  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
        "4          CBD-06         PS-04   Member    Male     1971.0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
        "1178.2956753399776"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
        "34.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +885,7 @@
        "Freq: M, Name: Precipitation_In, dtype: float64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -938,7 +938,7 @@
        "Freq: M, Name: Precipitation_In, dtype: float64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,23 +958,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "16.517241379310345"
+       "17.586206896551722"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def average_bikes_by_station():\n",
-    "    return station.current_dockcount.mean()\n",
+    "    return station[['install_dockcount']].install_dockcount.mean()\n",
     "average_bikes_by_station()"
    ]
   },
@@ -983,36 +983,33 @@
    "metadata": {},
    "source": [
     "## When a bike station is modified, is it more likely that it’ll lose bikes or gain bikes? How do you know?\n",
-    "> solution we can subtract install_dockcount from current_dockcount if the result is positive then the station gain bikes else lose bikes"
+    "> solution:  sum all install_dockcount and  sum all current_dockcount then subtract install summation from current summation then return the result \n",
+    "> in this way we can kn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "-64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def gain_or_lose_bikes(station_id):\n",
-    "    result = int(station[station['station_id'] == station_id].current_dockcount) - int(station[station['station_id'] == station_id].install_dockcount)\n",
-    "    if result < 0:\n",
-    "        return False\n",
-    "    elif result > 0:\n",
-    "        return True\n",
-    "    else:\n",
-    "        return 'same'\n",
-    "gain_or_lose_bikes('BT-01')\n",
-    "gain_or_lose_bikes('CH-02')"
+    "def gain_or_lose_bikes():\n",
+    "    modifed = station[['modification_date','install_dockcount','current_dockcount']].dropna()\n",
+    "    current = modifed.current_dockcount.sum()\n",
+    "    install = modifed.install_dockcount.sum()\n",
+    "    return current - install\n",
+    "gain_or_lose_bikes()"
    ]
   },
   {
@@ -1031,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1040,7 +1037,7 @@
        "'Male'"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1067,7 @@
        "1931.0"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1091,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1097,7 @@
        "47.598488"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1121,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1142,8 +1139,8 @@
     "    assert_equal(most_common_age_sharer(), 34.0)\n",
     "    assert_equal(average_precipitation_per_month()[0], 0.30052631578947364)\n",
     "    assert_equal(median_precipitation_per_month()[0], 0.140)\n",
-    "    assert_equal(average_bikes_by_station(), 16.517241379310345)\n",
-    "    assert_equal(gain_or_lose_bikes('CH-02'), True)\n",
+    "    assert_equal(average_bikes_by_station(), 17.586206896551722)\n",
+    "    assert_equal(gain_or_lose_bikes(), -64)\n",
     "    assert_equal(older_sharer(), 1931.0)\n",
     "    assert_equal(minimum_lat(), 47.598488)\n",
     "    assert_equal(most_common_gender_sharer(),'Male')\n",
